--- a/app/src/main/res/xml/game_settings.xml
+++ b/app/src/main/res/xml/game_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen
-		xmlns:android="http://schemas.android.com/apk/res/android"
-		xmlns:os="http://schemas.android.com/apk/res/org.moire.opensudoku">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto">
 	<PreferenceCategory
 			android:title="@string/game_helpers">
 		<CheckBoxPreference
@@ -84,9 +83,9 @@
 					android:summary="@string/screen_border_size_summary"
 					android:dialogTitle="@string/screen_border_size"
 					android:defaultValue="0"
-					os:max="30"
-					os:min="0"
-					os:valueFormat="%s pixels"/>
+					app:max="30"
+					app:min="0"
+					app:valueFormat="%s pixels"/>
 			<CheckBoxPreference
 					android:key="highlight_touched_cell"
 					android:title="@string/highlight_touched_cell"
