--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,6 +3,11 @@
 
 	<style name="Theme" parent="Theme.AppCompat" />
 
+	<style name="MyTheme" parent="Theme.AppCompat">
+		<item name="windowNoTitle">true</item>
+		<item name="windowActionBar">false</item>
+	</style>
+
 	<style name="Theme.Default">
 		<item name="lineColor">#757575</item>
 		<item name="sectorLineColor">#9e9e9e</item>
