--- a/app/src/main/res/layout/sudoku_list.xml
+++ b/app/src/main/res/layout/sudoku_list.xml
@@ -1,20 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	android:orientation="vertical"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+
+	<include
+		android:id="@+id/toolbar"
+		layout="@layout/toolbar"/>
 
 	<ListView
         android:id="@id/android:list"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="0dp"
+		android:layout_weight="1"/>
 
 	<TextView
         android:id="@+id/filter_status"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="#AA333333" />
 
-</RelativeLayout>
+	<com.google.android.gms.ads.AdView
+		android:id="@+id/ad_view"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content"
+		app:adSize="SMART_BANNER"
+		app:adUnitId="@string/banner_ad_unit_id" />
+
+</LinearLayout>
