--- a/app/src/main/res/layout-land/sudoku_edit.xml
+++ b/app/src/main/res/layout-land/sudoku_edit.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/root_layout"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center_horizontal">
+    android:layout_height="fill_parent">
 
-    <org.moire.opensudoku.gui.SudokuBoardView
-        android:id="@+id/sudoku_board"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent" />
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
 
-    <org.moire.opensudoku.gui.inputmethod.IMControlPanel
-        android:id="@+id/input_methods"
+    <LinearLayout
+        android:id="@+id/root_layout"
+        android:orientation="horizontal"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:gravity="center_horizontal">
 
+        <org.moire.opensudoku.gui.SudokuBoardView
+            android:id="@+id/sudoku_board"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent" />
+
+        <org.moire.opensudoku.gui.inputmethod.IMControlPanel
+            android:id="@+id/input_methods"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent" />
+
+    </LinearLayout>
 </LinearLayout>
