--- a/app/src/main/res/layout/sudoku_edit.xml
+++ b/app/src/main/res/layout/sudoku_edit.xml
@@ -7,6 +7,10 @@
     android:layout_height="fill_parent"
     android:gravity="center_horizontal">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
     <org.moire.opensudoku.gui.SudokuBoardView
         android:id="@+id/sudoku_board"
         android:layout_width="fill_parent"
@@ -15,6 +19,7 @@
     <org.moire.opensudoku.gui.inputmethod.IMControlPanel
         android:id="@+id/input_methods"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
