--- a/app/src/main/res/layout/sudoku_export.xml
+++ b/app/src/main/res/layout/sudoku_export.xml
@@ -6,6 +6,10 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
