--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -12,6 +12,7 @@
 		<attr name="textColor" format="color"/>
 		<attr name="textColorReadOnly" format="color"/>
 		<attr name="textColorNote" format="color"/>
+		<attr name="textColorSameNumber" format="color"/>
 		<attr name="backgroundColor" format="color"/>
 		<attr name="backgroundColorSecondary" format="color"/>
 		<attr name="backgroundColorReadOnly" format="color"/>
