--- a/app/src/main/res/menu/edit_sudoku.xml
+++ b/app/src/main/res/menu/edit_sudoku.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_save"
-        android:icon="@drawable/ic_save"
+        android:icon="@drawable/ic_save_grey_24dp"
         android:title="@string/save"
         app:showAsAction="ifRoom"
         android:orderInCategory="0"
@@ -12,7 +12,7 @@
         android:alphabeticShortcut="s"/>
     <item
         android:id="@+id/action_cancel"
-        android:icon="@drawable/ic_close"
+        android:icon="@drawable/ic_clear_grey_24dp"
         android:title="@string/android:cancel"
         app:showAsAction="ifRoom"
         android:orderInCategory="1"
